[gd_scene load_steps=10 format=2]

[ext_resource path="res://Untitled.png" type="Texture" id=1]
[ext_resource path="res://Cube.gd" type="Script" id=2]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 10, 10 )

[sub_resource type="Gradient" id=2]

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=5]
flags_albedo_tex_force_srgb = true
albedo_texture = ExtResource( 1 )
uv1_scale = Vector3( -1, 1, 1 )
uv1_triplanar_sharpness = 0.784584

[sub_resource type="CubeMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
albedo_texture = ExtResource( 1 )
uv1_offset = Vector3( 1, 0, 0 )

[node name="Spatial" type="Spatial"]

[node name="CSGMesh" type="CSGMesh" parent="."]
mesh = SubResource( 1 )
material = SubResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.800187, 0.59975, 0, -0.59975, 0.800187, -0.142368, 1.42135, 2.21676 )
light_color = Color( 0, 1, 0.0627451, 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.929892, 0.367832, 0, -0.367832, 0.929892, 0, 3.44296, 4.43744 )

[node name="CSGBox" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.28721, 1.05589, 0 )
material = SubResource( 5 )

[node name="Cube" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.30065, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 5.0
margin_bottom = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_right = 320.0
margin_bottom = 40.0

[node name="Button" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_right = 45.0
margin_bottom = 40.0
text = "reset"

[node name="chkX" type="CheckButton" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_left = 49.0
margin_right = 137.0
margin_bottom = 40.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chkY" type="CheckButton" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_left = 141.0
margin_right = 228.0
margin_bottom = 40.0
text = "Y"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chkZ" type="CheckButton" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_left = 232.0
margin_right = 320.0
margin_bottom = 40.0
text = "Z"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/MarginContainer/HBoxContainer/Button" to="Cube" method="_on_Button_pressed"]
[connection signal="toggled" from="CanvasLayer/MarginContainer/HBoxContainer/chkX" to="Cube" method="_on_chkX_toggled"]
[connection signal="toggled" from="CanvasLayer/MarginContainer/HBoxContainer/chkY" to="Cube" method="_on_chkY_toggled"]
[connection signal="toggled" from="CanvasLayer/MarginContainer/HBoxContainer/chkZ" to="Cube" method="_on_chkZ_toggled"]
